--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue-maps</title>
   </head>
+  <style>
+    body,html {
+      height: 100%;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+    }
+  </style>
   <body>
     <noscript>
       <strong>We're sorry but vue-maps doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
